java/istio/infra/step-2/profile-service/profile-service-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service-deployment-v2
  labels:
    app: profile-service
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile-service
      version: v2
  template:
    metadata:
      labels:
        app: profile-service
        version: v2
    spec:
      serviceAccountName: profile-service-sa
      containers:
        - name: profile-service-container-v2
          image: sinhasonalkumar/user-profile-service:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
