java/istio/infra/step-2/profile-service/profile-service-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: profile-service
spec:
  hosts:
    - profile-service
  http:
    - route:
        - destination:
            host: profile-service
            subset: v1
          weight: 0
        - destination:
            host: profile-service
            subset: v2
          weight: 100
